--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -220,7 +220,7 @@
         .macbook {
           width: 20rem;
           height: 10rem;
-          margin: 0 1rem;
+          margin: 0 1rem 1rem 1rem;
         }
       }
     }
